--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export && mv out docs",
     "start": "next start",
     "lint": "next lint"
   },
@@ -25,5 +25,6 @@
     "prisma": "^5.4.2",
     "tailwindcss": "^3",
     "typescript": "^5"
-  }
+  },
+  "homepage": "https://seblex9.github.io/learnxai"
 }
