Set up production db with ElephantSQL

--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://seb:1234@localhost:5432/tasks"
+DATABASE_URL="postgres://srgdfeuu:o1_w2zgRCqeQ7qBfRw1I5rbMC45IUjdz@cornelius.db.elephantsql.com/srgdfeuu"
+
